2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>

	* gswitchit-applet.c: Add missing include to get rid of a warning.

2007-01-22  Timur Salikhov  <Tima-S@yandex.ru>
	
	* help/ru/ru.po:
	* help/Makefile.am: Added Russian translation.

2006-11-20  Christophe Bliard  <christophe.bliard@trux.info>

	* help/fr/fr.po: Updated French translation.

2006-11-16  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-11-15  Kjartan Maraas  <kmaraas@gnome.org>

	* help/C/gswitchit.xml: Fix build.

2006-10-05  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.

2006-10-02  Davyd Madeley  <davyd@madeley.id.au>

	* gswitchit-applet.c: gcc2.95 fixes. Patch from Jens Granseuer.
	  Closes #348875.

2006-08-06  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: "reinit-ui" processed, background is updated,
	closing #318787

2006-07-25  Christophe Bliard  <christophe.bliard@trux.info>

	* help/fr/fr.po: Updated French translation
	
2006-07-23  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Updated Swedish translation.
	
2006-07-09  Sergey Udaltsov <svu@gnome.org>

	* GNOME_GSwitchItApplet.xml, Makefile.am, gswitchit-applet.c,
	gswitchit-plugins-add.c, gswitchit-plugins.c, gswitchit-plugins.glade,
	gswitchit-plugins.h: moving plugin management app to libgswitchit,
	removing it from the popup menu

2006-07-08  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: changing orientation depending on the panel

2006-07-06  Sergey Udaltsov <svu@gnome.org>

	Fixing the build process

2006-07-05  Sergey Udaltsov <svu@gnome.org>

	* GNOME_GSwitchItApplet.xml: Changed to "Keyboard Preferences",
	#315643
	
2006-07-05  Sergey Udaltsov <svu@gnome.org>

	* Makefile.am: Link with g-s-d DBUS

2006-07-03  Sergey Udaltsov <svu@gnome.org>

	* gswitchit-applet.c: Disable layout preview for non-XKB backend(s)
	
2006-06-29  Daniel Nylander  <po@danielnylander.se>

	* help/sv/sv.po: Added Swedish translation.
	