@@ -1,41 +1,0 @@
-<?xml version="1.0"?>
-<gconfschemafile>
-  <schemalist>
-    <schema>
-      <key>/schemas/apps/gswitchit/Applet/secondary</key>
-      <applyto>/apps/gswitchit/Applet/secondary</applyto>
-      <owner>gnome</owner>    
-      <type>int</type>
-      <default>0</default>
-      <locale name="C">
-         <short>Secondary groups</short>
-         <long>Secondary groups</long>
-      </locale>
-    </schema>
-     
-    <schema>
-      <key>/schemas/apps/gswitchit/Applet/showFlags</key>
-      <applyto>/apps/gswitchit/Applet/showFlags</applyto>
-      <owner>gnome</owner>    
-      <type>bool</type>
-      <default>false</default>
-      <locale name="C">
-        <short>Show flags in the applet</short>
-        <long>Show flags in the applet to indicate the current layout</long>
-      </locale>
-    </schema>
-
-    <schema>
-      <key>/schemas/apps/gswitchit/Applet/enabledPlugins</key>
-      <applyto>/apps/gswitchit/Applet/enabledPlugins</applyto>
-      <owner>gnome</owner>    
-      <type>list</type>
-      <list_type>string</list_type>
-      <default>[]</default>
-      <locale name="C">
-        <short>The list of enabled Keyboard Indicator plugins</short>
-        <long>The list of enabled Keyboard Indicator plugins</long>
-      </locale>
-    </schema>
-  </schemalist>
-</gconfschemafile>
