@@ -1,3 +1,8 @@
+2007-03-19  Sergey Udaltsov <svu@gnome.org>
+
+	* Makefile.am, gswitchit.schemas.in: dropping unneeded and obsolete
+	schema
+
 2007-01-30  Kjartan Maraas  <kmaraas@gnome.org>
 
 	* gswitchit-applet.c: Add missing include to get rid of a warning.
